--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "@/src/styles/globals.scss",
+    "css": "./src/styles/globals.scss",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
