--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
+    "react-notion": "^0.10.0",
     "sass": "^1.80.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
