--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "katex": "^0.16.20",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
+    "notion-client": "^7.1.6",
+    "notion-types": "^7.1.6",
+    "notion-utils": "^7.1.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "react-notion": "^0.10.0",
+    "react-notion-x": "^7.2.6",
     "sass": "^1.80.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
